[package]
name = "crossextism"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
extism = "1.20.0"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
js-sys = "0.3.91"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3.64"